commit for all changes for hands on ex 2, 3, in class ex 3

--- a/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
+++ b/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
@@ -295,5 +295,9 @@ girafe(code = print(p1 + p2),
          )
        ) 
 
+#Note ID is important field: The data_id aesthetic is critical to link observations between plots and the tooltip aesthetic is optional but nice to have when mouse over a point.
+
+
 
 ```
+
