--- a/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
+++ b/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Hands-on Exercise 3"
+title: "Hands-on Exercise 3: Programming Interactive Data Visualisation with R"
 author: "Lin Lin"
 ---
 
