--- a/TakeHomeEx/TakeHomeEx1/TakehomeExercise1.qmd
+++ b/TakeHomeEx/TakeHomeEx1/TakehomeExercise1.qmd
@@ -38,10 +38,14 @@ Package used:
 
 -   **`raincloudplots`:** This package is tailored towards easy visualization of grouped and repeated measures data. Moreover, it also provides individually linked repeated measures visualizations, which add detail and richness to a multitude of within-subject designs.
 
+-   **`lubridate`:** lubridate is an R package that provides a set of tools for working with dates and times in R. It makes it easy to parse and manipulate date-time data, and provides functions to extract various components of date-time objects such as year, month, day, hour, minute, and second
+
+-   **`ggiraph`:**: for making ‘ggplot’ graphics interactive.
+
 ```{r loadlibrary}
     #| warning: false
     #| echo: false
-  pacman::p_load(tidyverse,dplyr, ggplot2, plotly,gganimate,ggstatsplot, ggdist, patchwork ) 
+  pacman::p_load(tidyverse,dplyr, ggplot2, plotly,gganimate,ggstatsplot, ggdist, patchwork, gt, ggridges, lubridate, ggiraph) 
 ```
 
 Load data from data files then inspect the data format
@@ -127,6 +131,8 @@ Convert categorical data with fixed sequence as factor, such as education level,
   FinancialJournal$amount <- as.numeric(FinancialJournal$amount)
   # Format timestamp to only keep date information
   FinancialJournal$date <- as.Date(FinancialJournal$timestamp)
+  FinancialJournal$year <- year(FinancialJournal$date)
+  FinancialJournal$month <- month(FinancialJournal$date)
 
 ```
 
@@ -223,6 +229,8 @@ We first want to understand how is the overall happiness level - Joviality distr
 
 ```
 
+#### 3.1.1 About factors affecting joviality level
+
 Next we explore if there's any difference between different categorical attributes (Household Size, Education level, have Kids, Interest Group etc) with their Joviality value using violin chart.
 
 ```{r factorsAffectingJoviality}
@@ -280,15 +288,16 @@ Next we explore if there's any difference between different categorical attribut
   
 ```
 
-
 ```{r}
   library(patchwork)
-
+  
+  # -----------------------Edu level-------------------------------
+  #obtain the mean value table and save it with gt
   mean_joviality_edu <- Participants %>%
   group_by(educationLevel) %>%
   summarize(mean_joviality = mean(joviality)) %>%
-  arrange(desc(mean_joviality))
-  mean_joviality_edu
+  arrange(desc(mean_joviality)) %>% 
+  gt()
   
   #Visualizing the uncertainty of point estimates: ggdist methods
   pedu <- Participants %>%
@@ -299,29 +308,50 @@ Next we explore if there's any difference between different categorical attribut
     show.legend = TRUE     
   ) +                        
   labs(
-    title = "Visualising confidence intervals of mean joviality score with different education level",
+    title = "Confidence intervals of mean joviality score with different education level",
     subtitle = "Gradient + interval plot")
-  pedu
-  #mean_joviality_edu | pedu
   
-  mean_joviality_house <- Participants %>%
-  group_by(householdSize) %>%
-  summarize(mean_joviality = mean(joviality))%>%
-  arrange(desc(mean_joviality))
-  mean_joviality_house
+  tmp1 <- tempfile(fileext = '.png') #create temp file
+  gtsave(mean_joviality_edu,tmp1)
+  table_edu_png <- png::readPNG(tmp1, native = TRUE)
+
+  pedu+table_edu_png
   
-  phouse <- Participants %>%
-  ggplot(aes(x = joviality, 
-             y = householdSize)) +
-  stat_gradientinterval(   
-    fill = "skyblue",      
-    show.legend = TRUE     
-  ) +                        
-  labs(
-    title = "Visualising confidence intervals of mean joviality score with different household Size",
-    subtitle = "Gradient + interval plot")
-  phouse
+ 
   
+  
+  
+```
+
+```{r}
+   # -------------------------household-----------------------------------------
+    mean_joviality_house <- Participants %>%
+    group_by(householdSize) %>%
+    summarize(mean_joviality = mean(joviality))%>%
+    arrange(desc(mean_joviality))%>% 
+    gt()
+    
+    phouse <- Participants %>%
+    ggplot(aes(x = joviality, 
+               y = householdSize)) +
+    stat_gradientinterval(   
+      fill = "skyblue",      
+      show.legend = TRUE     
+    ) +                        
+    labs(
+      title = "Confidence intervals of mean joviality score with household Size",
+      subtitle = "Gradient + interval plot")
+    
+    tmp2 <- tempfile(fileext = '.png') #create temp folder
+    gtsave(mean_joviality_edu,tmp2)
+    table_house_png <- png::readPNG(tmp2, native = TRUE)
+    
+   phouse + table_house_png
+```
+
+```{r}
+  
+ 
   mean_joviality_kids <- Participants %>%
   group_by(haveKids) %>%
   summarize(mean_joviality = mean(joviality))%>%
@@ -336,7 +366,7 @@ Next we explore if there's any difference between different categorical attribut
     show.legend = TRUE     
   ) +                        
   labs(
-    title = "Visualising confidence intervals of mean joviality score with different household Size",
+    title = "CI of mean joviality score with/without kids",
     subtitle = "Gradient + interval plot")
   pkids
   
@@ -354,69 +384,69 @@ Next we explore if there's any difference between different categorical attribut
     show.legend = TRUE     
   ) +                        
   labs(
-    title = "Visualising confidence intervals of mean joviality score with different household Size",
+    title = "CI of mean joviality score with different interest Group",
     subtitle = "Gradient + interval plot")
   
 ```
 
+**Data insights**
 
-#### Data insights
+By visually inspect the data, with different categories may have different median value for joviality. By looking at mean/median value together, it looks like:
 
-By visually inspect the data, with different categories may have different median value for joviality.
-By looking at mean/median value together, it looks like:
+-   people with Graduate education level has highest joviality
+-   Household with size of 3 has highest joviality
+-   People has kids has higher joviality than people without kids
+-   People with interest group ECG has higher joviality than others
 
-- people with Graduate education level has highest joviality
-- Household with size of 3 has highest joviality
-- People has kids has higher joviality than people without kids
-- People with interest group ECG has higher joviality than others
-
-
-To test our hypothesis above, we will do some statistical test. The null hypothesis will be the characterists displayed between different sample based on different category is only because of sampling randomness.
-For hasKids, it's True or False, we will use T test.
-For other categorical values such as educationLevel,householdSize,interestGroup, they have 2 or more than 2 categories, we will use ANOVA test.
-First is to test if 
-
-
-
-
-The data doesn't look as normally distributed based on violin chart, hence we use Kruskal - Wallis test. The Kruskal-Wallis test is a non-parametric test, which does not assume that the data is normally distributed or that the variances are equal. It tests whether there is a significant difference in medians of the groups.
+To test our hypothesis above, we will do some statistical test. The null hypothesis will be the characterists displayed between different sample based on different category is only because of sampling randomness. For hasKids, it's True or False, we will use T test. For other categorical values such as educationLevel,householdSize,interestGroup, they have 2 or more than 2 categories, we will use ANOVA test. The data doesn't look as normally distributed based on violin chart, hence we use Kruskal - Wallis test. The Kruskal-Wallis test is a non-parametric test, which does not assume that the data is normally distributed or that the variances are equal. It tests whether there is a significant difference in medians of the groups.
 
 ```{r statsTest}
   #| warning: false
-  #plotting violin plot across regions
+
+  #Two sample mean test for HasKids
+  ggbetweenstats(
+    data = Participants,
+    x = haveKids, 
+    y = joviality,
+    type = "np",
+    messages = FALSE
+  )
+
+  #Oneway ANOVA Test with ggbetweenstats() method for education
   ggbetweenstats(data = Participants, x = educationLevel, y = joviality,
                  xlab = "Education Level", ylab = "Joviality Value",
-                 type = "np", pairwise.comparisons = T, pairwise.display = "ns", 
-                 mean.ci = T, p.adjust.method = "fdr",  conf.level = 0.95,
+                 type = "np", pairwise.comparisons = TRUE, pairwise.display = "s", 
+                 mean.ci = TRUE, p.adjust.method = "fdr",  conf.level = 0.95,
                  title = "Comparison of Median Joviality across different Education Level",
                  package = "ggthemes", palette = "Tableau_10") +
-    scale_y_continuous(limits = c(0, 1.5))
-
-
-  # Subset data to keep only necessary columns
-  Joviality_Education <- Participants %>%
-    select(joviality, educationLevel)
+   scale_y_continuous(limits = c(0, 1.5))
   
-  # Rename the education level categories
-  Joviality_Education$educationLevel <- recode(Joviality_Education$educationLevel,
-                                               "None" = "No Formal Education",
-                                               "Primary" = "Primary Education",
-                                               "Secondary" = "Secondary Education",
-                                               "Tertiary" = "Tertiary Education")
+  #Oneway ANOVA Test with ggbetweenstats() method for education
+  ggbetweenstats(data = Participants, x = householdSize, y = joviality,
+                 xlab = "Education Level", ylab = "Joviality Value",
+                 type = "np", pairwise.comparisons = TRUE, pairwise.display = "s", 
+                 mean.ci = TRUE, p.adjust.method = "fdr",  conf.level = 0.95,
+                 title = "Comparison of Median Joviality across different household Size",
+                 package = "ggthemes", palette = "Tableau_10") +
+   scale_y_continuous(limits = c(0, 1.5))
   
-  # Plot the violin plot
-  ggplot(data = Joviality_Education, aes(x = educationLevel, y = joviality)) +
-    geom_violin(trim = FALSE, fill = "grey80") +
-    geom_boxplot(width = 0.1, fill = "white", color = "black", alpha = 0.7) +
-    ggtitle("Distribution of Joviality scores across Education levels") +
-    labs(x = "Education Level", y = "Joviality Score") +
-    scale_y_continuous(limits = c(0, 1), expand = c(0, 0))
+  #Oneway ANOVA Test with ggbetweenstats() method for education
+  ggbetweenstats(data = Participants, x = interestGroup, y = joviality,
+                 xlab = "Education Level", ylab = "Joviality Value",
+                 type = "np", pairwise.comparisons = TRUE, pairwise.display = "s", 
+                 mean.ci = TRUE, p.adjust.method = "fdr",  conf.level = 0.95,
+                 title = "Comparison of Median Joviality across different interest Group",
+                 package = "ggthemes", palette = "Tableau_10") +
+   scale_y_continuous(limits = c(0, 1.5))
 
+  
 ```
 
-#### 3.1.2 About the population - Family related analysis (Family size, presence of kids)
+From above statistical tests, p values are all quite big. None of them is less than 0.05 and able to reject null hypothesis. So we accept null hypothesis as the differences are due to sample randomness. there's no specific category of factor that significately affects the joviality value.
 
-Next, we can explore how many Unique Participants are there in the population? And among the Participants, how many have/do not have kids?
+#### 3.1.2 About factor influencing have kids
+
+Next, we count how many Unique Participants are there in the population? And among the Participants, how many have/do not have kids?
 
 ```{r}
   
@@ -440,69 +470,161 @@ Participants %>%
   labs(x = "Have Kids?", y = "Participants Count", title = "Distribution of Participants with/without kids",subtitle = paste0("Total Participants: ", TotalParticipantCount$n)) +
   geom_text(aes(label = paste0(count, " (", round(percent, 2), "%)")), position = position_stack(vjust = 0.5)) +
   ggtitle("Number of Participants with and without kids") +
-  scale_fill_manual(values = c("#999999", "#78C850"), labels = c("No", "Yes")) +
+  scale_fill_manual(values = c("#999999", "#78C850"), labels = c("False", "True")) +
   theme_minimal()
 
 
 ```
 
-## TODO
+So what are the factors that may affect having kids? There might be some relationship between categorical data, we will look at the data to understand if education level affects having kids, we can perform a chi-squared test for independence. This test will help us determine if there is a significant association between the two categorical variables (education level and have kids). The output of the chi-squared test will give us a p-value. If the p-value is less than the significance level (usually 0.05), we can reject the null hypothesis and conclude that there is a significant association between education level and having kids. The null hypothesis in this test is that the two variables are independent, meaning that there is no association between them. the contingency table shows the frequency count of Participants' education level and whether they have kids or not. The chi-squared test has been performed to determine whether there is a significant association between education level and having kids.
 
-To understand if education level affects having kids, we can perform a chi-squared test for independence. This test will help us determine if there is a significant association between the two categorical variables (education level and have kids). The output of the chi-squared test will give us a p-value. If the p-value is less than the significance level (usually 0.05), we can reject the null hypothesis and conclude that there is a significant association between education level and having kids. The null hypothesis in this test is that the two variables are independent, meaning that there is no association between them. the contingency table shows the frequency count of Participants' education level and whether they have kids or not. The chi-squared test has been performed to determine whether there is a significant association between education level and having kids.
+```{r}
+  # create contingency table
+  cont_table <- table(Participants$educationLevel, Participants$haveKids)
+  
+  # perform chi-squared test
+  chi_test <- chisq.test(cont_table)
+  
+  # display contingency table
+  cont_table
+  
+  # display chi-squared test results
+  cat("Chi-squared test results:")
+  chi_test
+```
 
 The result shows that the chi-squared statistic is 12.481 with 3 degrees of freedom, and the p-value is 0.005905. The p-value is less than the conventional alpha level of 0.05, which means that we reject the null hypothesis of independence and conclude that there is a significant association between education level and having kids.
 
-As for the best visualization to plot, we can use a stacked bar chart to show the proportion of participants with and without kids for each education level. Here is an example R code to create a stacked bar chart:
-
-#TODO TRY RAINCLOUDPLOTS library(raincloudplots)
+As for the best visualization to plot, we can use a stacked bar chart to show the proportion of participants with and without kids for each education level.
 
 ```{r}
-
-
-# Create a contingency table
-cont_table <- table(Participants$educationLevel, Participants$haveKids)
-
-# Perform chi-squared test
-chisq.test(cont_table)
-
-
-# Load the required library
-library(ggplot2)
-
-# Create a stacked bar chart
-ggplot(Participants, aes(x = educationLevel, fill = haveKids)) +
+  absCount <- ggplot(Participants, aes(x = educationLevel, fill = haveKids)) +
   geom_bar(position = "stack") +
   labs(title = "Education level vs. Having kids", x = "Education level", y = "Count", fill = "Have kids")
 
+  catPercentage <- Participants %>%
+  group_by(educationLevel, haveKids) %>%
+  summarise(count = n()) %>%
+  mutate(percent = count / sum(count) * 100) %>%
+  mutate(haveKids = ifelse(haveKids, "Yes", "No")) %>%
+  ggplot(aes(x = educationLevel, y = count, fill = haveKids)) +
+  geom_bar(position = "fill", stat = "identity") +
+  labs(x = "Education Level", y = "Proportion", title = "Proportion of Participants with/without kids by Education Level", fill = "Have kids") +
+  geom_text(aes(label = paste0(round(percent, 1), "%")), position = position_fill(vjust = 0.5)) +
+  scale_fill_manual(values = c("#999999", "#78C850"), labels = c("False", "True")) +
+  theme_minimal()
+  
+  absCount / catPercentage
   
 ```
+
+By visually inspect this diagram, we know that for higher education level such as Bachelors or Graduate, there's fewer people having kids.
+
+
 
 Use histogram to visualize the distribution of household sizes:
 
 ```{r}
- library(ggplot2)
+ #library(ggplot2)
 
-  # create a histogram of household sizes
-  ggplot(Participants, aes(x = age, colour = haveKids)) +
-    geom_density()
-
+  ggplot(Participants, 
+       aes(x = age, 
+           y = educationLevel,
+           fill = stat(x))) +
+  geom_density_ridges_gradient(
+    scale = 1.2,
+    rel_min_height = 0.01) +
+  scale_fill_viridis_c(name = "Age range [Year's old]",
+                       option = "C") +
+  scale_x_continuous(
+    name = "education Levels distribution based on age",
+    expand = c(0, 0)
+  ) +
+  scale_y_discrete(name = NULL, expand = expansion(add = c(0.2, 2.6))) +
+  theme_ridges()
 
 
 ```
 
-#### 3.1.3 About the Financials
+#### 3.2 About the Financials
+
+Summarize financial data to aggregate spending by categories for the 1 full year, ignore time information.
+And sum up different categories to know more about net remaining value after this full year for each participants:
 
 ```{r}
 
-  ggplot(data=FinancialJournal, 
-       aes(x= category,
-           y = amount)) +
-  geom_boxplot(color="red", fill="orange", alpha=0.2) +                    
-  geom_point(position="jitter", 
-             size = 1) 
+
+  FinancialSumByCategory <- FinancialJournal %>%
+  group_by(participantId, category) %>%
+  summarise(sum_amount = sum(amount)) %>%
+  ungroup()
+
+  FinancialHorizonTable <- FinancialSumByCategory %>%
+    spread(category, sum_amount)
+  
+  
+  FinancialHorizonTable$net_remaining <- rowSums(FinancialHorizonTable[,c("Wage", "Shelter", "RentAdjustment", "Recreation", "Food", "Education")], na.rm = TRUE)
+
+
+  combinedTable <- Participants %>% 
+                inner_join(FinancialHorizonTable, by = "participantId")
+  
+  
+  
+  view(FinancialHorizonTable)
+  view(combinedTable)
 ```
+Now we explore the relationship between joviality and the net remaining money for each individual participants. Scatterplot was selected to check the relationship.
+
+The scatterplot shows the relationship between joviality and net remaining amount for each individual in the dataset, with each point representing a different person. The x-axis shows the joviality score, while the y-axis shows the net remaining amount.
+
+The blue line represents the linear regression fit for each facet. The line gives an indication of the overall trend of the relationship between joviality and net remaining amount within each facet.
 
 ```{r}
 
-  # Group by, spread
+  library(ggrepel)
+  pJov <-  ggplot(data=combinedTable, 
+       aes(x= joviality, 
+           y=net_remaining,
+           color = educationLevel,
+           alpha = 0.5)) +
+  geom_point() +
+  geom_smooth(method=lm, 
+              size=0.5) +  
+  geom_label_repel(aes(label = age), 
+                   fontface = "bold", 
+                   show.legend = FALSE) +
+  ggtitle("Joviality versus net remaining") +
+  xlab("Joviality") +
+  ylab("Net Remaining Amount") +
+  facet_wrap(~haveKids, nrow = 1) # facet by haveKids in one row
+
+  
+  pWage <-  ggplot(data=combinedTable, 
+       aes(x= joviality, 
+           y= Wage,
+           color = educationLevel,
+           alpha = 0.5)) +
+  geom_point() +
+  geom_smooth(method=lm, 
+              size=0.5) +  
+  geom_label_repel(aes(label = age), 
+                   fontface = "bold", 
+                   show.legend = FALSE) +
+  ggtitle("Joviality versus wage") +
+  xlab("Joviality") +
+  ylab("Wage Amount") +
+  facet_wrap(~haveKids, nrow = 1) # facet by haveKids in one row
+
+
+
+  ggplotly(pJov)
+  ggplotly(pWage)
+  
 ```
+
+From the linear model line plotted above, generally a high wage or a high remaining net amount doesn't guarantee you high Joviality in life. And this trend is the same regardless participants have or do not have kids.
+
+However, interestingly, for HighSchool Or college educational level, with a low wage, if people has kids, their Joviality raised up.
+
+
